--- a/client/src/bower.json
+++ b/client/src/bower.json
@@ -1,13 +1,21 @@
 {
-  "name": "Hapi-Mongoose-Angular",
-  "description": "",
-  "version": "0.0.0",
-  "homepage": "",
-  "license": "",
+  "name": "porthal",
+  "homepage": "https://github.com/Nighthawk22/Hapi-Mongoose-Angular",
+  "authors": [
+    "Maximilian Zollneritsch <m.zollneritsch@netconomy.net>"
+  ],
+  "description": "Porthal Frontend",
+  "main": "index.html",
+  "license": "MIT",
   "private": true,
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
   "dependencies": {
-    "angular": "~1.3.3",
-    "angular-route": "~1.2.x",
-    "angular-resource": "~1.2.x"
+    "angular": "^1.5.5"
   }
 }
